[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Heist_Meisters_Assets/GFX/PNG/Hitman 1/hitman1_stand.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Characters/HumanOccluder.tres" type="OccluderPolygon2D" id=3]
[ext_resource path="res://Interface/Theme.tres" type="Theme" id=4]

[sub_resource type="CapsuleShape2D" id=1]
height = 24.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 320, 242 )
collision_mask = 14
script = ExtResource( 2 )

[node name="PlayerSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2, 0 )
shape = SubResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 1 )
energy = 0.75

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="DisguiseLabel" type="Label" parent="."]
margin_left = 17.0
margin_top = -40.0
margin_right = 76.0
margin_bottom = -13.0
theme = ExtResource( 4 )
text = "0.00"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
